Fixed overflow

--- a/src/main/webapp/scss/echoed-lightbox.scss
+++ b/src/main/webapp/scss/echoed-lightbox.scss
@@ -145,7 +145,7 @@ $twitterColor: #4099FF;
         padding: 5px;
         text-align:left;
         line-height: 1.2em;
-        white-space: normal;
+        white-space: nowrap;
         font-size: 12px;
         color: #111;
         font-family: $textFontFamily;
